# Compiler

./: .gitignore  CMakeLists.txt  TODO
examples/: include_test.lang  main.lang
include/: analyzer.h  assembler.h  assembler_templates.h  ast.h  codegen.h  io.h  lang_config.h  lang_lexer_config.h  lexer.h  list.h  log.h  parser.h  path.h  preprocessor.h  strings.h  symbol_table.h  types.h  variable.h  x86_32_codegen.h
src/: analyzer.c  assembler.c  ast.c  io.c  lexer.c  list.c  log.c  main.c  parser.c  path.c  preprocessor.c  strings.c  symbol_table.c  variable.c  x86_32_codegen.c
